[package]
name = "bluepill-tank-level"
version = "0.1.0"
edition = "2021"

[dependencies]
# force timer 3 as a time-driver because TIM1 and TIM4 are used for the ultrasonic sensor and TIM4 is picked
# by default with time-driver-any
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "ded1f9d33520fc847dce8fe72f2fb80f6fa86350", features = [ "defmt", "stm32f103c8", "memory-x",  "unstable-pac", "time-driver-tim3", "exti" ]  }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "ded1f9d33520fc847dce8fe72f2fb80f6fa86350", features = ["arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "ded1f9d33520fc847dce8fe72f2fb80f6fa86350", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "1.0.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }

[profile.dev]
opt-level = "s"

[profile.release]
debug = 2