[package]
name = "bluepill-tank-level"
version = "0.1.0"
edition = "2021"

[dependencies]
# Use brunob45 fork for a working input_capture while PR3014 is not yet merged
# force timer 3 as a time-driver because TIM1 and TIM4 are used for the ultrasonic sensor and TIM4 is picked
# by default with the feature time-driver-any
embassy-stm32 = { git = "https://github.com/brunob45/embassy", rev = "a87b33303403ba3601d0c631b9efe1cb3853c73b", features = [
    "defmt",
    "stm32f103c8",
    "memory-x",
    "unstable-pac",
    "time-driver-tim3",
    "exti",
] }
embassy-executor = { git = "https://github.com/brunob45/embassy", rev = "a87b33303403ba3601d0c631b9efe1cb3853c73b", features = [
    "arch-cortex-m",
    "executor-thread",
    "defmt",
    "integrated-timers",
] }
embassy-time = { git = "https://github.com/brunob45/embassy", rev = "a87b33303403ba3601d0c631b9efe1cb3853c73b", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "tick-hz-32_768",
] }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7"
panic-probe = { version = "0.3", features = ["print-defmt"] }

embedded-hal = "1"

ufmt = "0.2.0"
ufmt-macros = "0.3.0"
heapless = { version = "0.8.0", features = ["ufmt"] }

[profile.dev]
opt-level = "s"

[profile.release]
debug = 2
