[package]
name = "bluepill-tank-level"
version = "0.1.0"
edition = "2021"

[dependencies]
# Use brunob45 fork to get interrupts in pwm_input while PR3029 is not yet merged
# force timer 3 as a time-driver because TIM1 and TIM4 are used for the ultrasonic sensor and TIM4 is picked
# by default with the feature time-driver-any
embassy-stm32 = { git = "https://github.com/brunob45/embassy", rev = "0a4db6ffe2b45e3e72c64307562be78e2813b692", features = [
    "defmt",
    "stm32f103c8",
    "memory-x",
    "unstable-pac",
    "time-driver-tim3",
    "exti",
] }
embassy-executor = { git = "https://github.com/brunob45/embassy", rev = "0a4db6ffe2b45e3e72c64307562be78e2813b692", features = [
    "arch-cortex-m",
    "executor-thread",
    "defmt",
    "integrated-timers",
] }
embassy-time = { git = "https://github.com/brunob45/embassy", rev = "0a4db6ffe2b45e3e72c64307562be78e2813b692", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "tick-hz-32_768",
] }
embassy-embedded-hal = { git = "https://github.com/brunob45/embassy", rev = "0a4db6ffe2b45e3e72c64307562be78e2813b692" }
embassy-sync = { git = "https://github.com/brunob45/embassy", rev = "0a4db6ffe2b45e3e72c64307562be78e2813b692" }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7"
panic-probe = { version = "0.3", features = ["print-defmt"] }

embedded-hal = "1"

ufmt = "0.2"
ufmt-macros = "0.3"
heapless = { version = "0.8", features = ["ufmt"] }

display-interface-spi = "0.5"
display-interface = { version = "0.5", features = ["defmt-03"] }
ili9341 = "0.6"
embedded-graphics = { version = "0.8", features = ["defmt"] }

[profile.dev]
opt-level = "s"

[profile.release]
debug = 2
